Refine document structure, update authors and simplify motivation section

--- a/versions-latex-tex/Fisica_para_Mates_Propuesta_de_Implementacion/propuesta-implementacion-1.tex
+++ b/versions-latex-tex/Fisica_para_Mates_Propuesta_de_Implementacion/propuesta-implementacion-1.tex
@@ -54,10 +54,16 @@
 
 \geometry{margin=1in}
 
-\title{\textbf{Física para Mates \\
+\title{\textbf{Física para Mates: \\
 Implementación Piloto}}
-\author{Aníbal Olivera M.}
-\date{Noviembre 2025}
+\author{
+  Aníbal Olivera M. \\
+  \texttt{an.oliveram@udd.cl}
+  \and
+  Viviana Solano P.\\
+  \texttt{vsolano@udd.cl}
+}
+\date{Enero 2026}
 
 \begin{document}
 
@@ -139,7 +145,7 @@ Balística 2 (4.3)    & X & X & X &   &   & X &   &   &   & X & X & 1 \\
 Balística 3 (4.4)    &   & X & X &   &   & X &   &   &   & X & X & 1 \\
 Sólido Rev. 1 (4.5)  & X & X & X &   &   & X & X & X &   & X & X & 1 \\
 \midrule
-Sólido Rev. 2 (5.1)  &   & X & X &   & X & X & X & X &   &   & X & 3 \\
+Sólido Rev. 2 (5.1)  &   & X & X &   & X & X & X & X &   &   & X & 2 \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -147,11 +153,9 @@ Sólido Rev. 2 (5.1)  &   & X & X &   & X & X & X & X &   &   & X & 3 \\
 \vspace{0.3cm}
 \noindent\textbf{Asignatura sugerida:}
 \begin{itemize}
-  \item[0:] Álgebra
+   \item[0:] Álgebra
   \item[1:] Geometría
-  \item[2:] Taller de Física I (en articulación con Introducción al Cálculo)
-  \item[3:] Cálculo Diferencial
-  \item[4:] Cálculo Integral
+  \item[2:] Taller de Física I o Introducción al Cálculo
 \end{itemize}
 
 En este documento nos centraremos en los problemas 4.1--4.5 y 5.1, articulados entre Geometría y Taller de Física I.
@@ -165,12 +169,9 @@ En este documento nos centraremos en los problemas 4.1--4.5 y 5.1, articulados e
 \subsection*{Álgebra}
 
 \begin{itemize}
-\item Geometría:
-\begin{itemize}
 \item Curso del de primer año, bimestral, entre marzo y abril. 
 \item Clases de 140 minutos, de lunes a viernes, durante 8 semanas.
-\item Para esta propuesta se utilizarán sesiones de 140 minutos, agendadas al final del primer módulo del curso (de un total de 2). 
-\end{itemize}
+\item Para esta propuesta se utilizarán sesiones de 140 minutos, agendadas al final del \textbf{primer módulo} del curso (de un total de 2). 
 \end{itemize}
 
 \subsection*{Geometría}
@@ -416,51 +417,13 @@ En esta propuesta, el proyecto \textit{Física para Mates} se integra dentro de 
 \end{itemize}
 
 %======================================================================
-\chapter{Herramienta para medir Motivación}
+\chapter{Medición de motivación y estrategias de aprendizaje}
 %======================================================================
 
-Puedo adaptar el MSLQ (Motivated Strategies for Learning Questionnaire) para ``Física para Mates'' porque el instrumento no mide contenidos específicos de una asignatura, sino constructos generales de motivación para el aprendizaje (valoración de la tarea, expectativas/autoeficacia y componente afectivo como ansiedad ante evaluaciones). Eso lo hace portable: basta con contextualizar la redacción (``este curso'', ``esta asignatura'') a Física para Mates y mantener el formato de respuesta.
 
-Además, en el estudio chileno de Inzunza et al. se observa que, empíricamente, los ítems de motivación tienden a organizarse en tres dimensiones amplias (valoración, expectativas y afecto/ansiedad), lo que permite una versión más corta para encuestas aplicadas en clase. Para mi proyecto, esto es clave porque necesito un instrumento breve y aplicable más de una vez (diagnóstico y seguimiento) sin fatigar a los estudiantes.
+Para medir el impacto de la intervención en variables de motivación y estrategias de aprendizaje se utilizará la versión del cuestionario \textbf{MSLQ} presentado por Inzunza et al. (2018), validado en estudiantes universitarios chilenos de primer año. Este instrumento no mide contenidos específicos de una asignatura, sino constructos generales de motivación para el aprendizaje (valoración de la tarea, expectativas/autoeficacia y componente afectivo como ansiedad ante evaluaciones). Eso lo hace portable: basta con contextualizar la redacción (``este curso'', ``esta asignatura'') a Física para Mates y mantener el formato de respuesta.
 
-\textbf{Alcances y resguardos:}
-\begin{enumerate}
-    \item La adaptación debe ser mínima: mantener el sentido de cada ítem, el período de referencia (curso actual) y la escala Likert original.
-    \item No puedo asumir que la estructura factorial se replicará idéntica; por eso haré validación interna en mi muestra (consistencia interna y EFA/CFA) y, si algún ítem funciona mal, lo ajustaré o excluiré con criterios transparentes.
-    \item La ``motivación'' puede reportarse por subdimensiones (valor, expectativas, ansiedad) y no solo como un puntaje global, porque la ansiedad suele comportarse distinto y es interpretativamente relevante en un curso de física.
-    \item Si el objetivo es comparar con estudios que usan el MSLQ completo, la comparabilidad será parcial (por usar versión abreviada), pero para análisis interno del proyecto (antes/después, diferencias por grupo, relación con desempeño) la versión corta es adecuada.
-\end{enumerate}
-
-En resumen: sí se puede adaptar, porque el constructo es general y el contexto es cambiable, pero hay que hacerlo con cautela metodológica y validación en la muestra del curso.
-
-\textbf{Referencias Clave:}
-\begin{itemize}
-    \item Inzunza, B., Pérez, C., Márquez, C., Ortiz, L., Marcellini, S., \& Duk, S. (2018). Estructura factorial y confiabilidad del Cuestionario de Motivación y Estrategias de Aprendizaje (MSLQ) en estudiantes universitarios chilenos de primer año. \textit{Revista Iberoamericana de Diagnóstico y Evaluación}, 47(2), 21–35. \url{https://doi.org/10.21865/RIDEP47.2.02}
-    \item Pintrich, P. R., Smith, D. A. F., Garcia, T., \& McKeachie, W. J. (1991). \textit{A manual for the use of the Motivated Strategies for Learning Questionnaire (MSLQ)}. National Center for Research to Improve Postsecondary Teaching and Learning, University of Michigan.
-\end{itemize}
-
-\section{Instrumento}
-
-Para medir el impacto de la intervención en variables de motivación y estrategias de aprendizaje, se utilizará una versión adaptada del cuestionario \textbf{MSLQ}, validado en estudiantes universitarios chilenos de primer año.
-
-Este cuestionario evalúa dimensiones como:
-
-\begin{itemize}
-\item Valoración de la tarea.
-\item Expectativas de logro y autoeficacia.
-\item Ansiedad ante la evaluación.
-\item Organización y planificación.
-\item Estrategias de aprendizaje (resumen, elaboración, pensamiento crítico).
-\item Manejo del tiempo y ambiente de estudio.
-\item Búsqueda de ayuda.
-\end{itemize}
-
-En su versión completa, el instrumento contiene alrededor de 80 ítems tipo Likert. Para efectos de esta implementación piloto se sugiere considerar:
-
-\begin{itemize}
-\item Usar el cuestionario completo, destinando aproximadamente \textbf{15–20 minutos} de clase.
-\item Alternativamente, diseñar una \textbf{versión abreviada} centrada en los factores más relevantes (por ejemplo, autoeficacia, valor de la tarea y ansiedad), reduciendo el tiempo de aplicación.
-\end{itemize}
+En su versión completa, el instrumento contiene alrededor de 80 ítems tipo Likert. Sin embargo, el módulo de \textit{motivación} de Inzunza et al. (2018) consta solo de 28 ítems. En adelante, se detalla el plan de aplicación y el banco de ítems seleccionado.
 
 \section{Aplicación pre–post}
 
@@ -482,12 +445,10 @@ En su versión completa, el instrumento contiene alrededor de 80 ítems tipo Lik
 
 Los resultados del cuestionario no afectan la nota de los estudiantes en ningún caso. Esta información se utilizará para monitorear cambios en la \textbf{motivación} y \textbf{estrategias de estudio} frente al uso de simulaciones y problemas contextualizados; y alimentar investigaciones posteriores sobre enseñanza de Matemática y Física en Ingeniería.
 
-\section{Estrategia para medir motivación (versión corta basada en Inzunza)}
+\section{Herramienta para medir Motivación}
 
-\subsection{Objetivo}
-Construir una medida breve de ``motivación académica'' usando solo los ítems que, en la adaptación chilena reportada por Inzunza, conforman los 3 factores motivacionales (valoración, expectativas y afecto/ansiedad), y luego validar internamente esa estructura en la muestra.
+El objetivo es construir una medida breve de ``motivación académica'' usando solo los ítems que, en la adaptación chilena reportada por Inzunza et al. (2018), conforman los 3 factores motivacionales (valoración, expectativas y afecto/ansiedad), y luego validar internamente esa estructura en la muestra. Siguiendo esta estrategia, seleccionamos los factores e ítems que se detallan a continuación.
 
-\subsection{Decisión de instrumento}
 Usaremos los factores motivacionales identificados por Inzunza:
 \begin{itemize}
     \item \textbf{F1}: Valor de la tarea (valoración).
@@ -495,7 +456,21 @@ Usaremos los factores motivacionales identificados por Inzunza:
     \item \textbf{F8}: Ansiedad (afecto).
 \end{itemize}
 
-El total de ítems a aplicar es de 28 ítems (F1=9, F3=14, F8=5). Esta decisión prioriza brevedad, a costa de renunciar a la estructura ``clásica'' de 6 subescalas del MSLQ original.
+El total de ítems a aplicar es de 28 ítems (F1=9, F3=14, F8=5), a ser medidos usando una escala Likert de 1 a 5 (total desacuerdo a total acuerdo), manteniendo el período de referencia ``este curso''. En cuanto a tiempos de aplicación, se estiman los siguientes:
+\begin{itemize}
+    \item 28 ítems $\times$ 20 segundos por ítem $\approx$ 10 minutos.
+    \item + instrucciones iniciales (30–60 s) $\approx$ 5 a 8 minutos total.
+\end{itemize}
+
+\vspace{0.5cm}
+
+\textbf{Referencias:}
+\begin{itemize}
+    \item Inzunza, B., Pérez, C., Márquez, C., Ortiz, L., Marcellini, S., \& Duk, S. (2018). Estructura factorial y confiabilidad del Cuestionario de Motivación y Estrategias de Aprendizaje (MSLQ) en estudiantes universitarios chilenos de primer año. \textit{Revista Iberoamericana de Diagnóstico y Evaluación}, 47(2), 21–35. \url{https://doi.org/10.21865/RIDEP47.2.02}
+    \item Pintrich, P. R., Smith, D. A. F., Garcia, T., \& McKeachie, W. J. (1991). \textit{A manual for the use of the Motivated Strategies for Learning Questionnaire (MSLQ)}. National Center for Research to Improve Postsecondary Teaching and Learning, University of Michigan.
+\end{itemize}
+
+\newpage
 
 \subsection{Banco de ítems}
 
@@ -546,30 +521,18 @@ El total de ítems a aplicar es de 28 ítems (F1=9, F3=14, F8=5). Esta decisión
 
 \subsection{Validación interna y estimación de tiempo}
 
-\textbf{Validación interna (plan mínimo)}
-En la muestra, ejecutar:
+Para tener evidencia de validez y confiabilidad en la muestra del curso, se hará el siguiente análisis. En la muestra, ejecutar:
 \begin{enumerate}
     \item Revisión de calidad de datos: faltantes, distribuciones, piso/techo por ítem.
     \item Consistencia interna por factor: alfa/omega + correlaciones ítem-total.
-    \item EFA/CFA (idealmente CFA si ya asumes 3 factores):
+    \item CFA (Análisis Factorial Confirmatorio):
     \begin{itemize}
         \item Modelo 3 factores: F1, F3, F8.
         \item Revisar cargas y correlaciones entre factores.
     \end{itemize}
-    \item Reglas de depuración:
-    \begin{itemize}
-        \item Ítems con carga baja o ítem-total bajo: candidatos a eliminación.
-        \item Atención especial a ítems 3 y 11 (en Inzunza aparecen asociados a Ansiedad; en otros marcos no son ``ansiedad'' pura).
-    \end{itemize}
     \item Reporte: (i) versión final, (ii) evidencia de fiabilidad, (iii) evidencia de estructura interna.
 \end{enumerate}
 
-\textbf{Estimación de tiempo de respuesta}
-Supuesto: formato Likert (p.ej., 1–5) y aplicación autoadministrada.
-\begin{itemize}
-    \item 28 ítems $\times$ 20 segundos por ítem $\approx$ 10 minutos.
-    \item + instrucciones iniciales (30–60 s) $\approx$ 5 a 8 minutos total.
-\end{itemize}
 
 %======================================================================
 \chapter{Requerimientos logísticos}
